--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
       <a href="https://www.blockscout.com" target="_blank" class="button">
         <i class="fas fa-external-link-alt"></i> Visit Blockscout
       </a>
-      <a href="https://coderrf.github.io/MIRZA-SBT/" target="_blank" class="button">
+      <a href="https://mirzaecosystem.vercel.app/" target="_blank" class="button">
         <i class="fas fa-rocket"></i> Get MIRZA SBT
       </a>
     </div>
@@ -542,4 +542,5 @@
     });
   </script>
 </body>
+
 </html>
